# zoomcampDataEngineer

./: .gitignore  NOTE.MD  Notebook_camp.ipynb  README.md  Untitled.ipynb  main.py  pyproject.toml
pipeline/: Dockerfile  docker-compose.yaml  ingest_data.py  pipeline.py  pyproject.toml
